signup, login et logout + modèle user ok

--- a/NPP/views/authentification/login.hbs
+++ b/NPP/views/authentification/login.hbs
@@ -13,8 +13,8 @@
     </label>
   </p>
 
-  {{#if errorMessage}}
-  <div class="error-message">{{errorMessage}}</div>
+  {{#if message}}
+    <div class="error-message">{{ message }}</div>
   {{/if}}
 
   <button type="submit">Login</button>
