--- a/NPP/views/article/all.hbs
+++ b/NPP/views/article/all.hbs
@@ -2,7 +2,7 @@
   {{#each allArticles}}
   <li>
     <a href="/articles/{{_id}}">{{title}}</a> {{! lien vers le detail }}
-    - <a href="/articles/edit?article_id={{_id}}">EDIT</a>
+    <a href="/articles/edit?article_id={{_id}}">EDIT</a>
   </li>
   {{/each}}
 </ul>
