--- a/NPP/views/article/new.hbs
+++ b/NPP/views/article/new.hbs
@@ -1,4 +1,4 @@
-<form action="/posts" method="POST" enctype="multipart/form-data">
+<form action="/articles" method="POST" enctype="multipart/form-data">
     <p>
     <label>
       Title :
@@ -42,6 +42,6 @@
     </p>
 
     <p>
-        <button>Create new article</button>
+        <button>Save</button>
     </p>
 </form>
