--- a/NPP/views/index.hbs
+++ b/NPP/views/index.hbs
@@ -1,2 +1,10 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<div class="bouton">
+  <a href="/signup">Sign up</a>
+</div>
+
+<div class="bouton">
+  <a href="/login">Log in</a>
+</div>
