--- a/NPP/views/media/profile.hbs
+++ b/NPP/views/media/profile.hbs
@@ -1,4 +1,4 @@
-<form action="/profile" method="post" enctype="multipart/form-data">
+<form action="/profile/{{media.id}}" method="post" enctype="multipart/form-data">
   <p>
     <label>
       Media name:
