avant suppression de dossier relou

--- a/NPP/views/media/profile.hbs
+++ b/NPP/views/media/profile.hbs
@@ -9,14 +9,14 @@
   <p>
     <label>
       Email:
-      <input type="text" name="email">
+      <input type="text" name="email" value="{{media.email}}">
     </label>
   </p>
 
   <p>
     <label>
       Password:
-      <input type="password" name="password">
+      <input type="password" name="password" value="***">
     </label>
   </p>
 
