--- a/views/article/all.hbs
+++ b/views/article/all.hbs
@@ -3,7 +3,7 @@
 </div>
 
 <div class="bouton">
-  <a href="/profile/{{media.id}}">Edit profile</a>
+  <a href="/profile">Edit profile</a>
 </div>
 
 <div class="bouton">
