--- a/views/authentification/login.hbs
+++ b/views/authentification/login.hbs
@@ -1,8 +1,8 @@
 <form action="/login" method="post">
   <p>
     <label>
-      Email:
-      <input type="text" name="email">
+      <div class="field-name">Email:</div>
+      <div class="field-content"><input type="text" name="email"></div>
     </label>
   </p>
 
