--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,19 @@
-<header>
-  <img src="https://via.placeholder.com/3000x1500" class="logo-index">
-</header>
+<div class="center-page">
+  <header>
+    <img src="https://via.placeholder.com/3000x1500" class="logo-index">
+  </header>
 
-<div class="welcome">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu porttitor erat, faucibus scelerisque massa. Mauris eget justo sit amet quam placerat tincidunt et quis elit. Nunc accumsan, ex vel fringilla sagittis, diam enim porttitor lorem, quis luctus erat metus non est. Cras rutrum dui vel ipsum ornare, a egestas nunc efficitur. Praesent ac blandit erat. Donec maximus mauris erat, ac dictum orci aliquet sed. Proin vitae mauris in turpis tincidunt maximus. Vivamus nec nisl id arcu pellentesque fermentum. 
-</div>
-
-<div class="boutons">
-  <div class="bouton">
-    <a href="/signup">Sign up</a>
+  <div class="welcome">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu porttitor erat, faucibus scelerisque massa. Mauris eget justo sit amet quam placerat tincidunt et quis elit. Nunc accumsan, ex vel fringilla sagittis, diam enim porttitor lorem, quis luctus erat metus non est. Cras rutrum dui vel ipsum ornare, a egestas nunc efficitur. Praesent ac blandit erat. Donec maximus mauris erat, ac dictum orci aliquet sed. Proin vitae mauris in turpis tincidunt maximus. Vivamus nec nisl id arcu pellentesque fermentum. 
   </div>
 
-  <div class="bouton">
-    <a href="/login">Log in</a>
+  <div class="boutons">
+    <div class="bouton">
+      <a href="/signup">Sign up</a>
+    </div>
+
+    <div class="bouton">
+      <a href="/login">Log in</a>
+    </div>
   </div>
 </div>
