--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,10 +6,14 @@ body {
   font: 14px Arial, sans-serif; }
 
 a {
+  color: #00B7FF;
+  text-decoration: none; }
+
+.bouton a {
   color: #fff;
   text-decoration: none; }
 
-/* INDEX */
+/********** INDEX **********/
 header {
   text-align: center;
   z-index: 10; }
@@ -48,26 +52,71 @@ header {
   text-transform: uppercase;
   letter-spacing: 2px; }
 
-/* SIGN UP */
-/* LOG IN */
+/********** SIGN UP **********/
+/********** LOG IN **********/
+.center-page {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%); }
+
 .field-name {
   background-color: #f19d31;
-  padding: 15px;
+  padding: 8px;
   border-radius: 0 40px 40px 0;
   -moz-border-radius: 0 40px 40px 0;
   -webkit-border-radius: 0 40px 40px 0;
   color: white;
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  width: 100%; }
+  letter-spacing: 2px; }
 
 .field-content {
+  padding: 8px; }
+
+.field {
+  display: flex;
+  align-items: center; }
+
+input {
   background: #fff; }
 
-/* PROFILE */
-/* ARTICLE */
-/* ALL ARTICLES */
-/* ERROR PAGE */
+.center-form {
+  display: inline-block;
+  text-align: center; }
+
+button {
+  background-color: #00B7FF;
+  padding: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 40px;
+  -moz-border-radius: 40px;
+  -webkit-border-radius: 40px;
+  border: 0;
+  margin: 5px;
+  text-align: center;
+  color: white;
+  font-size: 15px;
+  font-family: arial;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px; }
+
+.under-submit {
+  margin-top: -2px;
+  font-size: 13px; }
+
+/********** PROFILE **********/
+.img-profile-pic {
+  width: 100%;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+/********** ARTICLE **********/
+/********** ALL ARTICLES **********/
+/********** ERROR PAGE **********/
 
 /*# sourceMappingURL=style.css.map */
