--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -8,11 +8,16 @@ body {
 }
 
 a {
-  color: #fff;
+  color: #00B7FF;
   text-decoration: none;
 }
 
-/* INDEX */
+.bouton a {
+  color: #fff;
+  text-decoration: none;  
+}
+
+/********** INDEX **********/
 
 header {
   text-align: center;
@@ -57,12 +62,21 @@ header {
   letter-spacing: 2px;
 }
 
-/* SIGN UP */
+/********** SIGN UP **********/
 
-/* LOG IN */
+/********** LOG IN **********/
+
+.center-page {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
 .field-name {
   background-color: #f19d31;
-  padding: 15px;
+  padding: 8px;
   border-radius: 0 40px 40px 0;
   -moz-border-radius: 0 40px 40px 0;
   -webkit-border-radius: 0 40px 40px 0;
@@ -70,21 +84,62 @@ header {
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
-  width: 100%;
 }
 
 .field-content {
-  background: white;
+  padding: 8px;
+}
+
+.field {
+  display: flex;
+  align-items: center;
 }
 
 input {
-
+  background: #fff;
 }
 
-/* PROFILE */
+.center-form {
+  display: inline-block;
+  text-align: center;
+}
 
-/* ARTICLE */ 
+button {
+  background-color: #00B7FF;
+  padding: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 40px;
+  -moz-border-radius: 40px;
+  -webkit-border-radius: 40px;
+  border: 0;
+  margin: 5px;
+  text-align: center;
+  color: white;
+  font-size: 15px;
+  font-family: arial;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
 
-/* ALL ARTICLES */
+.under-submit {
+  margin-top: -2px;
+  font-size: 13px;
+}
 
-/* ERROR PAGE */ 
+/********** PROFILE **********/
+
+
+.img-profile-pic {
+  width: 100%;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/********** ARTICLE **********/ 
+
+/********** ALL ARTICLES **********/
+
+/********** ERROR PAGE **********/ 
