--- a/views/article/new.hbs
+++ b/views/article/new.hbs
@@ -1,4 +1,4 @@
-<form action="/articles" method="POST" enctype="multipart/form-data">
+<form action="/article/create-article" method="POST" enctype="multipart/form-data">
     <p>
     <label>
       Title :
@@ -42,6 +42,6 @@
     </p>
 
     <p>
-        <button>Save</button>
+        <button type="submit">Save</button>
     </p>
 </form>
