--- a/views/authentification/signup.hbs
+++ b/views/authentification/signup.hbs
@@ -1,40 +1,58 @@
-<form action="/signup" method="post" enctype="multipart/form-data">
-  <p>
-    <label>
-      Media name:
-      <input type="text" name="name">
-    </label>
-  </p>
+<div class="center-page">
+  <form action="/signup" method="post" enctype="multipart/form-data" class="center-form">
+    <p>
+      <label>
+        <div class="field">
+          <div class="field-name">Media name:</div>
+          <div class="field-content">
+            <input type="text" name="name">
+          </div>
+        </div>
+      </label>
+    </p>
 
-  <p>
-    <label>
-      Email:
-      <input type="text" name="email">
-    </label>
-  </p>
+    <p>
+      <label>
+        <div class="field">
+          <div class="field-name">Email:</div>
+          <div class="field-content">
+            <input type="text" name="email">
+          </div>
+        </div>
+      </label>
+    </p>
 
-  <p>
-    <label>
-      Password:
-      <input type="password" name="password">
-    </label>
-  </p>
+    <p>
+      <label>
+        <div class="field">
+          <div class="field-name">Password:</div>
+          <div class="field-content">
+            <input type="password" name="password">
+          </div>
+        </div>
+      </label>
+    </p>
 
-  <p>
-    <label>
-      Profile picture:
-      <input type="file" name="profile-pic">
-    </label>
-  </p>
+    <p>
+      <label>
+        <div class="field">
+          <div class="field-name">Profile picture:</div>
+          <div class="field-content">
+            <input type="file" name="profile-pic">
+          </div>
+        </div>
+      </label>
+    </p>
 
-  {{#if message}}
-  <div class="error-message">{{ message }}</div>
-  {{/if}}
+    {{#if message}}
+    <div class="error-message">{{ message }}</div>
+    {{/if}}
 
-  <button type="submit">Signup</button>
+    <button type="submit">Signup</button>
 
-  <p class="account-message">
-    Do you already have an account?
-    <a href="/login">Login</a>
-  </p>
-</form>
+    <p class="under-submit">
+      Do you already have an account?<br>
+      Awesome, let's get you <a href="/login">logged in</a>!
+    </p>
+  </form>
+</div>
