--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -97,6 +97,12 @@ header {
 
 input {
   background: #fff;
+  border: darkgrey;
+}
+
+textarea {
+  background: #fff;
+  border: darkgrey;
 }
 
 .center-form {
