--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -97,12 +97,12 @@ header {
 
 input {
   background: #fff;
-  border: darkgrey;
+  border: 1px solid darkgrey;
 }
 
 textarea {
   background: #fff;
-  border: darkgrey;
+  border: 1px solid darkgrey;
 }
 
 .center-form {
