--- a/views/article/edit.hbs
+++ b/views/article/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/article/edit-article" method="POST" enctype="multipart/form-data">
+<form action="/article/edit-article/{{article._id}}" method="POST" enctype="multipart/form-data">
   <p>
       <label>
         <div class="field">
