--- a/views/article/all.hbs
+++ b/views/article/all.hbs
@@ -14,9 +14,11 @@
   <ul>
     {{#each Articles}}
     <li>
-      <a href="/articles/{{_id}}">{{title}}</a> {{! lien vers le detail }}
-      - <a href="/articles/edit?article_id={{_id}}">EDIT</a>
+      <a href="articles/{{this._id}}">{{this.title}}</a> {{! lien vers le detail }}
+      - <a href="/articles/edit?article_id={{_id}}" class="edit-button">EDIT</a>
     </li>
     {{/each}}
   </ul>
 </div>
+
+
