--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -17,6 +17,15 @@ a {
   text-decoration: none;  
 }
 
+button a {
+  color: #fff;
+  text-decoration: none;  
+}
+
+ul {
+  list-style-type: none;
+ }
+
 /********** INDEX **********/
 
 header {
@@ -140,12 +149,61 @@ button {
 .img-profile-pic {
   width: 100%;
   height: 100px;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 /********** ARTICLE **********/ 
 
 /********** ALL ARTICLES **********/
+
+
+/********** LAYOUT **********/
+.nav-bar {
+  display: flex;
+  align-items: center;
+}
+
+.nav-left {
+  width: 15%;
+}
+
+.nav-middle {
+  display: inline;
+  text-align: center;
+  width: 70%;
+}
+
+.nav-right {
+  width: 15%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.profile-pic-nav {
+  height: 80px;
+  width: 80px;
+  border-radius: 80px;
+  -webkit-border-radius: 80px;
+  -moz-border-radius: 80px;
+}
+
+h1 {
+  font-size: 8vh;
+  margin: 0;
+  line-height: 8vh;
+}
+
+h3 {
+  font-size: 2.5vh;
+  margin: 0;
+  line-height: 3vh;
+  font-weight: normal;
+}
+
+.links-nav {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: bold;
+}
 
 /********** ERROR PAGE **********/ 
