--- a/views/media/profile.hbs
+++ b/views/media/profile.hbs
@@ -1,6 +1,6 @@
 <div class="center-page">
   <form action="/profile" method="post" enctype="multipart/form-data" class="center-form">
-    <div class="img-profile-pic" style="background: url({{media.profilePic}});background-size:contain"> 
+    <div class="img-profile-pic" style="background: url({{media.profilePic}}); background-size: contain; background-repeat: no-repeat; background-position: center;"> 
       {{!-- <div class="img-profile-pic">
         <img src={{media.profilePic}} alt="">
       </div> --}}
