--- a/views/article/all.hbs
+++ b/views/article/all.hbs
@@ -11,13 +11,16 @@
 </div>
 
 <div class="all-articles">
+  <p>Hello {{myself.name}}, here are your {{myself.articles.length}} articles!</p>
   <ul>
-    {{#each Articles}}
+    {{#each myself.articles}}
     <li>
-      <a href="articles/{{this._id}}">{{this.title}}</a> {{! lien vers le detail }}
-      - <a href="/articles/edit?article_id={{_id}}" class="edit-button">EDIT</a>
+      <a href="/edit-article/{{_id}}">{{title}}</a>
+      - <a href="/edit-article/edit?article_id={{_id}}">EDIT</a>
     </li>
-    {{/each}}
+    {{else}}
+    no post
+   {{/each}}
   </ul>
 </div>
 
