--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -185,27 +185,26 @@ button {
   text-align: center; }
 
 .title {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
   font-weight: bold;
   width: 37.3%; }
 
 .author {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
   font-weight: bold;
   width: 15%;
   text-align: center; }
 
 .date {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
-  font-weight: bold;
   width: 20%;
   text-align: center; }
 
 .action {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
   font-weight: bold;
   letter-spacing: 2px;
