--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -219,14 +219,14 @@ button {
 }
 
 .title {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
   font-weight: bold;
   width: 37.3%;
 }
 
 .author {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
   font-weight: bold;
   width: 15%;
@@ -234,15 +234,14 @@ button {
 }
 
 .date {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
-  font-weight: bold;
   width: 20%;
   text-align: center;
 }
 
 .action {
-  background-color: #dfdfdf;
+  background-color: #eeeeee;
   padding: 8px;
   font-weight: bold;
   letter-spacing: 2px;
