--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ header {
   z-index: 10; }
 
 .logo-index {
-  width: 35%;
+  width: 27%;
   display: inline-block;
   z-index: 8; }
 
@@ -40,8 +40,9 @@ header {
   text-align: center;
   padding: 30px;
   margin: auto;
-  width: 62%;
-  font-size: 16px; }
+  width: 55%;
+  font-size: 16px;
+  padding-top: 40px; }
 
 .bouton {
   background-color: #00B7FF;
@@ -58,6 +59,10 @@ header {
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px; }
+
+.highlight {
+  color: #f19d31;
+  font-weight: bold; }
 
 /********** SIGN UP **********/
 /********** LOG IN **********/
@@ -128,7 +133,7 @@ button {
 /********** ARTICLE **********/
 /********** ALL ARTICLES **********/
 .all-articles {
-  margin-top: 20px; }
+  margin-top: 110px; }
 
 .all-articles ul li {
   display: flex;
