--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
 <div class="center-page">
   <header>
-    <img src="https://via.placeholder.com/3000x1500" class="logo-index">
+    <img src="/images/logo.png" class="logo-index">
   </header>
 
   <div class="welcome">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu porttitor erat, faucibus scelerisque massa. Mauris eget justo sit amet quam placerat tincidunt et quis elit. Nunc accumsan, ex vel fringilla sagittis, diam enim porttitor lorem, quis luctus erat metus non est. Cras rutrum dui vel ipsum ornare, a egestas nunc efficitur. Praesent ac blandit erat. Donec maximus mauris erat, ac dictum orci aliquet sed. Proin vitae mauris in turpis tincidunt maximus. Vivamus nec nisl id arcu pellentesque fermentum. 
+      <span class="highlight">NPP, c'est quoi ?</span> C'est un back office simple à utiliser et sécurisé. Avec une plateforme épurée et ludique, poster et gérer des articles devient un processus qui prend moins de temps. Plutôt que se soucier de problèmes techniques, les rédacteurs pourront ainsi passer davantage de temps sur le plus important : le contenu.
   </div>
 
   <div class="boutons">
