--- a/views/article/all.hbs
+++ b/views/article/all.hbs
@@ -32,7 +32,7 @@
       <div class="author">{{author}}</div>
       <div class="date">{{createdAt}}</div>
       <div class="date">{{updatedAt}}</div>
-      <div class="action"><a href="/edit-article/{{_id}}">E</a> <a href="/delete-article/{{_id}}">D</a></div>
+      <div class="action"><a href="/article/edit-article/{{_id}}">E</a> <a href="/delete-article/{{_id}}">D</a></div>
     </li>
    {{/each}}
   </ul>
