--- a/views/article/new.hbs
+++ b/views/article/new.hbs
@@ -48,7 +48,7 @@
         <div class="field">
           <div class="field-name">Article:</div>
           <div class="field-content">
-            <textarea name="article"></textarea>
+            <textarea name="articleContent"></textarea>
           </div>
         </div>
       </label>
