--- a/views/article/edit-article.hbs
+++ b/views/article/edit-article.hbs
@@ -1,10 +1,10 @@
-<form action="/article/edit-article/{{article._id}}" method="POST" enctype="multipart/form-data">
+<form action="/article/edit-article/{{articleFromDatabase._id}}" method="POST" enctype="multipart/form-data">
   <p>
       <label>
         <div class="field">
           <div class="field-name">Title:</div>
           <div class="field-content">
-            <input type="text" name="title" value = {{articleFromDatabase.title}}>
+            <input type="text" name="title" value="{{articleFromDatabase.title}}" />
           </div>
         </div>
       </label>
@@ -15,7 +15,7 @@
         <div class="field">
           <div class="field-name">Featured picture:</div>
           <div class="field-content">
-      <input type="file" name="picFeatured" value = {{articleFromDatabase.picFeatured}}>
+      <input type="file" name="picFeatured" value={{articleFromDatabase.picFeatured}}>
           </div>
         </div>
       </label>
@@ -37,7 +37,7 @@
         <div class="field">
           <div class="field-name">Author(s):</div>
           <div class="field-content">
-            <input type="text" name="author" value = {{articleFromDatabase.author}}>
+            <input type="text" name="author" value="{{articleFromDatabase.author}}">
           </div>
         </div>
       </label>
@@ -48,7 +48,7 @@
         <div class="field">
           <div class="field-name">Article:</div>
           <div class="field-content">
-            <textarea name="article">{{articleFromDatabase.article}}</textarea>
+            <textarea name="articleContent">{{articleFromDatabase.articleContent}}</textarea>
           </div>
         </div>
       </label>
